--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,13 @@
 <html>
-    <head>
-        <meta charset="utf-8">
 
-    </head>
-    <body>
-        <script src="index.ts"></script>
-    </body>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./index.scss">
+</head>
+
+<body>
+
+    <script src="index.ts"></script>
+</body>
+
 </html>
